--- a/index.html
+++ b/index.html
@@ -117,12 +117,86 @@
     <div class="container" id="game-container"></div>
 
     <script>
-        var _0x2f280c=(755605^755600)+(668721^668725);const metaStoreLinks=["52558352133124472/teggun-ykaerf/secneirepxe/moc.atem.www//:sptth".split("").reverse().join(""),"88197189909141582/ahpla-tcejorp/secneirepxe/moc.atem.www//:sptth".split("").reverse().join(""),"9934465328457797/sreggat-ikser/secneirepxe/moc.atem.www//:sptth".split("").reverse().join(""),"\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u0067\u006F\u0072\u0069\u006C\u006C\u0061\u002D\u0074\u0061\u0067\u002F\u0034\u0039\u0037\u0039\u0030\u0035\u0035\u0037\u0036\u0032\u0031\u0033\u0036\u0038\u0032\u0033","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u006E\u0075\u0067\u0067\u0065\u0074\u002D\u0074\u0061\u0067\u0067\u0065\u0072\u0073\u002F\u0037\u0030\u0033\u0034\u0035\u0036\u0031\u0036\u0038\u0030\u0030\u0030\u0030\u0035\u0032\u0037","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u0073\u0075\u0070\u0065\u0072\u002D\u0061\u0070\u0065\u0073\u002D\u0076\u0072\u002F\u0032\u0037\u0036\u0035\u0030\u0033\u0033\u0033\u0033\u0033\u0031\u0032\u0032\u0034\u0031\u0032\u0037","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u0070\u0072\u006F\u006A\u0065\u0063\u0074\u002D\u006B\u0072\u0061\u0062\u0073\u002F\u0037\u0037\u0031\u0031\u0034\u0032\u0033\u0036\u0031\u0032\u0032\u0037\u0030\u0038\u0037\u0030","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u0032\u0036\u0030\u0037\u0030\u0039\u0038\u0038\u0036\u0032\u0035\u0038\u0038\u0031\u0038\u0030\u0031","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u006D\u006F\u006F\u0073\u0065\u0069\u0073\u0063\u0075\u0074\u0065\u002E\u0069\u0074\u0063\u0068\u002E\u0069\u006F\u002F\u0070\u0072\u006F\u006A\u0065\u0063\u0074\u006D\u006F\u006F\u0073\u0065","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u0070\u0072\u006F\u006A\u0065\u0063\u0074\u0062\u006C\u0061\u007A\u0065\u002F\u0039\u0031\u0037\u0034\u0033\u0034\u0035\u0031\u0032\u0032\u0036\u0032\u0036\u0033\u0030\u0030","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0077\u0077\u002E\u006D\u0065\u0074\u0061\u002E\u0063\u006F\u006D\u002F\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006E\u0063\u0065\u0073\u002F\u0038\u0031\u0038\u0036\u0031\u0030\u0037\u0038\u0035\u0034\u0037\u0033\u0033\u0030\u0035\u0032","\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0067\u0061\u006D\u0065\u0072\u002D\u0062\u006F\u0079\u002D\u0031\u0030\u0032\u002E\u0069\u0074\u0063\u0068\u002E\u0069\u006F\u002F\u0066\u006C\u0061\u0073\u0068\u0062\u0061\u0063\u006B\u002D\u0074\u0061\u0067\u0067\u0065\u0072\u0073"];_0x2f280c="dlodmp".split("").reverse().join("");async function fetchGameData(url){var _0x8fdd=(222998^223006)+(523717^523714);const _0xfbfdgc=`https://api.microlink.io/?url=${encodeURIComponent(url)}`;_0x8fdd=(509994^509996)+(149047^149054);try{const _0x251b5e=await fetch(_0xfbfdgc);const _0x_0x432=await _0x251b5e['\u006A\u0073\u006F\u006E']();if(_0x_0x432['\u0073\u0074\u0061\u0074\u0075\u0073']==="\u0073\u0075\u0063\u0063\u0065\u0073\u0073"){return{"title":_0x_0x432['\u0064\u0061\u0074\u0061']['\u0074\u0069\u0074\u006C\u0065']||"dnuof eltit oN".split("").reverse().join(""),'\u0064\u0065\u0073\u0063\u0072\u0069\u0070\u0074\u0069\u006F\u006E':_0x_0x432['\u0064\u0061\u0074\u0061']['\u0064\u0065\u0073\u0063\u0072\u0069\u0070\u0074\u0069\u006F\u006E']||"dnuof noitpircsed oN".split("").reverse().join(""),'\u0069\u006D\u0061\u0067\u0065':_0x_0x432['\u0064\u0061\u0074\u0061']['\u0069\u006D\u0061\u0067\u0065']?.url||"gpj.lru-egami-tluafed".split("").reverse().join(""),"link":_0x_0x432['\u0064\u0061\u0074\u0061']['\u0075\u0072\u006C']||url};}else{console['\u0065\u0072\u0072\u006F\u0072'](":rorrE".split("").reverse().join(""),_0x_0x432['\u0065\u0072\u0072\u006F\u0072']['\u006D\u0065\u0073\u0073\u0061\u0067\u0065']);return null;}}catch(error){console['\u0065\u0072\u0072\u006F\u0072'](":atad gnihctef rorrE".split("").reverse().join(""),error);return null;}}const createGameCard=gameData=>{const container=document['\u0067\u0065\u0074\u0045\u006C\u0065\u006D\u0065\u006E\u0074\u0042\u0079\u0049\u0064']("\u0067\u0061\u006D\u0065\u002D\u0063\u006F\u006E\u0074\u0061\u0069\u006E\u0065\u0072");var _0xbed5ag=(956688^956691)+(527218^527219);const gameCard=document['\u0063\u0072\u0065\u0061\u0074\u0065\u0045\u006C\u0065\u006D\u0065\u006E\u0074']("\u0064\u0069\u0076");_0xbed5ag="qdemdn".split("").reverse().join("");gameCard['\u0063\u006C\u0061\u0073\u0073\u004C\u0069\u0073\u0074']['\u0061\u0064\u0064']("\u0067\u0061\u006D\u0065\u002D\u0063\u0061\u0072\u0064");gameCard['\u0069\u006E\u006E\u0065\u0072\u0048\u0054\u004D\u004C']=`
-                <img src="${gameData['\u0069\u006D\u0061\u0067\u0065']}" alt="${gameData['\u0074\u0069\u0074\u006C\u0065']} Logo">
-                <div class="game-name">${gameData['\u0074\u0069\u0074\u006C\u0065']}</div>
-                <p>${gameData['\u0064\u0065\u0073\u0063\u0072\u0069\u0070\u0074\u0069\u006F\u006E']}</p>
-                <a href="${gameData['\u006C\u0069\u006E\u006B']}" class="game-button" target="_blank">Go to Game</a>
-            `;container['\u0061\u0070\u0070\u0065\u006E\u0064\u0043\u0068\u0069\u006C\u0064'](gameCard);};async function loadGames(){const _0x3beb=document['\u0067\u0065\u0074\u0045\u006C\u0065\u006D\u0065\u006E\u0074\u0042\u0079\u0049\u0064']("reniatnoc-emag".split("").reverse().join(""));_0x3beb['\u0069\u006E\u006E\u0065\u0072\u0048\u0054\u004D\u004C']="";for(const _0x5f_0x1ca of metaStoreLinks){var _0x0062b=(388727^388724)+(249475^249472);const _0xd7e=await fetchGameData(_0x5f_0x1ca);_0x0062b=989813^989808;if(_0xd7e){createGameCard(_0xd7e);}}}function filterGames(){var _0x33f=(568373^568373)+(826624^826629);const _0x2fb0e=document['\u0067\u0065\u0074\u0045\u006C\u0065\u006D\u0065\u006E\u0074\u0042\u0079\u0049\u0064']("\u0073\u0065\u0061\u0072\u0063\u0068\u002D\u0069\u006E\u0070\u0075\u0074")['\u0076\u0061\u006C\u0075\u0065']['\u0074\u006F\u004C\u006F\u0077\u0065\u0072\u0043\u0061\u0073\u0065']();_0x33f='\u0064\u0066\u006F\u0062\u0067\u006C';var _0x6a_0xabg=(583048^583040)+(422311^422310);const _0xd74bff=document['\u0071\u0075\u0065\u0072\u0079\u0053\u0065\u006C\u0065\u0063\u0074\u006F\u0072\u0041\u006C\u006C']("drac-emag.".split("").reverse().join(""));_0x6a_0xabg=638423^638420;_0xd74bff['\u0066\u006F\u0072\u0045\u0061\u0063\u0068'](card=>{const _0xfd22bb=card['\u0071\u0075\u0065\u0072\u0079\u0053\u0065\u006C\u0065\u0063\u0074\u006F\u0072']("\u002E\u0067\u0061\u006D\u0065\u002D\u006E\u0061\u006D\u0065")['\u0074\u0065\u0078\u0074\u0043\u006F\u006E\u0074\u0065\u006E\u0074']['\u0074\u006F\u004C\u006F\u0077\u0065\u0072\u0043\u0061\u0073\u0065']();if(_0xfd22bb['\u0069\u006E\u0063\u006C\u0075\u0064\u0065\u0073'](_0x2fb0e)){card['\u0073\u0074\u0079\u006C\u0065']['\u0064\u0069\u0073\u0070\u006C\u0061\u0079']="\u0062\u006C\u006F\u0063\u006B";}else{card['\u0073\u0074\u0079\u006C\u0065']['\u0064\u0069\u0073\u0070\u006C\u0061\u0079']="\u006E\u006F\u006E\u0065";}});}window['\u006F\u006E\u006C\u006F\u0061\u0064']=loadGames;
+        const metaStoreLinks = [
+            "https://www.meta.com/experiences/freaky-nugget/27442133125385525",
+            "https://www.meta.com/experiences/project-alpha/28514190998179188",
+            "https://www.meta.com/experiences/reski-taggers/7977548235644399",
+            "https://www.meta.com/experiences/gorilla-tag/4979055762136823",
+            "https://www.meta.com/experiences/nugget-taggers/7034561680000527",
+            "https://www.meta.com/experiences/super-apes-vr/27650333331224127",
+            "https://www.meta.com/experiences/project-krabs/7711423612270870",
+            "https://www.meta.com/experiences/26070988625881801",
+            "https://mooseiscute.itch.io/projectmoose",
+            "https://www.meta.com/experiences/projectblaze/9174345122626300",
+            "https://www.meta.com/experiences/8186107854733052",
+            "https://gamer-boy-102.itch.io/flashback-taggers"
+        ];
+
+        async function fetchGameData(url) {
+            const microlinkApiUrl = `https://api.microlink.io/?url=${encodeURIComponent(url)}`;
+
+            try {
+                const response = await fetch(microlinkApiUrl);
+                const data = await response.json();
+
+                if (data.status === "success") {
+                    return {
+                        title: data.data.title || 'No title found',
+                        description: data.data.description || 'No description found',
+                        image: data.data.image?.url || 'default-image-url.jpg',
+                        link: data.data.url || url,
+                    };
+                } else {
+                    console.error('Error:', data.error.message);
+                    return null;
+                }
+            } catch (error) {
+                console.error('Error fetching data:', error);
+                return null;
+            }
+        }
+
+        const createGameCard = (gameData) => {
+            const container = document.getElementById("game-container");
+
+            const gameCard = document.createElement("div");
+            gameCard.classList.add("game-card");
+            gameCard.innerHTML = `
+                <img src="${gameData.image}" alt="${gameData.title} Logo">
+                <div class="game-name">${gameData.title}</div>
+                <p>${gameData.description}</p>
+                <a href="${gameData.link}" class="game-button" target="_blank">Go to Game</a>
+            `;
+            container.appendChild(gameCard);
+        };
+
+        async function loadGames() {
+            const container = document.getElementById("game-container");
+            container.innerHTML = "";
+
+            for (const link of metaStoreLinks) {
+                const gameData = await fetchGameData(link);
+                if (gameData) {
+                    createGameCard(gameData);
+                }
+            }
+        }
+
+        function filterGames() {
+            const input = document.getElementById("search-input").value.toLowerCase();
+            const gameCards = document.querySelectorAll(".game-card");
+
+            gameCards.forEach(card => {
+                const gameName = card.querySelector(".game-name").textContent.toLowerCase();
+                if (gameName.includes(input)) {
+                    card.style.display = "block";
+                } else {
+                    card.style.display = "none";
+                }
+            });
+        }
+
+        window.onload = loadGames;
     </script>
 </body>
 </html>
