--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Type here... (Freaky Nugget is a good game you should try it)" onkeyup="filterGames()">
         </div>
-        <div class="top-right-text"><a href="https://discord.gg/YQyAMRDkda">Join the discord server and request your game to be added</a></div>
+        <div class="top-right-text"><a style="margin-right: 17px;" href="https://discord.gg/YQyAMRDkda">Join the discord to request your game to be added‎ ‎ </a></div>
     </div>
 
     <div class="container" id="game-container"></div>
