--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="title" content="Side Games">
+<meta name="description" content="Side Games is a appstore for vr games we have no rules (no porn or weird stuff) we allow gtag copies and fangames">
+<meta name="keywords" content="appstore, vr, sidegames,">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="author" content="SnakeArmy">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Side Games</title>
