--- a/freakynugget.html
+++ b/freakynugget.html
@@ -10,5 +10,5 @@
   <meta property="og:image" content="https://scontent.oculuscdn.com/v/t64.5771-25/38974521_1495374081105603_2307268268154360867_n.jpg?stp=dst-jpg_q92_s720x720_tt6&_nc_cat=104&ccb=1-7&_nc_sid=6e7a0a&_nc_ohc=szaH0sadl7UQ7kNvgEP7U5D&_nc_zt=3&_nc_ht=scontent.oculuscdn.com&oh=00_AYDUzml_ThUWysCZSi7LOlYJacCZqlkxOVYgFzt_4ouXTQ&oe=678EE2D5" />
   <meta property="og:image:width" content="720" />
   <meta property="og:image:height" content="405" />
-  <meta http-equiv="refresh" content="0; url=https://www.tutorialspoint.com">
+  <meta http-equiv="refresh" content="0; url=https://www.meta.com/experiences/freaky-nugget/27442133125385525">
 </head>
