--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Hi pls stop looking at me code -->
     <meta name="title" content="Side Games">
     <meta name="description" content="Side Games is a appstore for vr games we have no rules (no porn or weird stuff) we allow gtag copies and fangames">
     <meta name="keywords" content="appstore, vr, sidegames,">
