--- a/freakynugget.html
+++ b/freakynugget.html
@@ -12,5 +12,5 @@
   <meta property="og:image:height" content="405" />
 </head>
 <body>
-  <h1>hello there sir/maam click <a href="https://www.meta.com/experiences/freaky-nugget/27442133125385525">this</a> to go to the official project nugget mirror</h1>
+  <h1>hello there sir/maam click <a href="https://www.meta.com/experiences/freaky-nugget/27442133125385525">this</a> to go to the selected project nugget mirror</h1>
 </body>
