--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="navbar">
         <div class="logo">Side Games</div>
         <div class="search-bar">
-            <input type="text" id="search-input" placeholder="Type here... (Freaky Nugget is a good game you should try it)" onkeyup="filterGames()">
+            <input type="text" id="search-input" placeholder="Type here... (Project Nugget is a good game you should try it)" onkeyup="filterGames()">
         </div>
         <div class="top-right-text"><a style="margin-right: 17px;" href="https://discord.gg/YQyAMRDkda">Join the discord to request your game to be added‎ ‎ </a></div>
     </div>
