--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Type here... (Project Nugget is a good game you should try it)" onkeyup="filterGames()">
         </div>
-        <div class="top-right-text"><a style="margin-right: 17px;" href="https://discord.gg/YQyAMRDkda">Join the discord to request your game to be added‎ ‎ </a></div>
+        <div class="top-right-text"><a style="margin-right: 17px;" href="https://sidegames.snakearmy.xyz/request.html">Fill out this form to request your game to be added‎ ‎ </a></div>
     </div>
 
     <div class="container" id="game-container"></div>
